# LLM-TWIN

./: pyproject.toml
llm_enginerring/: __init__.py  settings.py
llm_enginerring/application/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
llm_enginerring/application/networks/: base.py  embeddings.py
llm_enginerring/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_enginerring/application/preprocessing/operations/: chunking.py
llm_enginerring/application/utils/: misc.py  split_user_full_name.py
llm_enginerring/domain/: __init__.py  chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  queries.py  types.py
llm_enginerring/domain/base/: __init__.py  nosql.py  vector.py
llm_enginerring/infrastructure/db/: mongo.py  qdrant.py
pipelines/: __init__.py  digital_data_etl.py  feature_engineering.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
tools/: run.py
