[project]
name = "llm-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "ms241g",email = "manojsharma1122@gmail.com"}
]

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version = "0.67.0", extras = ["server"] }
pymongo = "^4.6.2"
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
numpy = "^1.26.4"
poethepoet = "0.29.0"
datasets = "^3.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
